--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=report
 server.port=8081
 spring.kafka.consumer.group-id=default
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=password
 topic.name=t.topicname
 
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=ReportArchiveDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=ReportArchiveDB
+spring.data.mongodb.uri=mongodb://localhost:27017/ReportArchiveDB
+
