transforming into docker images

--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -1,3 +1,23 @@
 spring.application.name=main
 server.port=8080
 topic.name=t.topicname
+#spring.kafka.bootstrap-servers=kafka:9092
+
+
+
+# Kafka producer properties
+spring.kafka.producer.bootstrap-servers=kafka:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+
+spring.kafka.template.default-topic=t.topicname
+
+
+
+
+#kafka:
+#bootstrapServers: 192.168.99.100:9092
+#securityProtocol: PLAINTEXT
+#topics:
+#create: person.create
