--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -6,5 +6,6 @@ topic.name=t.topicname
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=ReportArchiveDB
-spring.data.mongodb.uri=mongodb://localhost:27017/ReportArchiveDB
-
+#spring.data.mongodb.uri=mongodb://localhost:27017/ReportArchiveDB
+spring.data.mongodb.uri=mongodb://mongodb:27017/ReportArchiveDB
+spring.kafka.consumer.bootstrap-servers=kafka:9092
