--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,16 @@
 version: "3.7"
 
 networks:
-  kafka-net:
-    name: kafka-net
+  my-network:
+    name: my-network
     driver: bridge
 
 services:
   zookeeper:
-    image: zookeeper:3.7.0
+    image: zookeeper:latest
     container_name: zookeeper
-    restart: "no"
     networks:
-      - kafka-net
+      - my-network
     ports:
       - "2181:2181"
 
@@ -20,29 +19,61 @@ services:
     container_name: kafka
     restart: "no"
     networks:
-      - kafka-net
+      - my-network
     ports:
       - "9092:9092"
     environment:
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: DOCKER_INTERNAL:PLAINTEXT,DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_LISTENERS: DOCKER_INTERNAL://:29092,DOCKER_EXTERNAL://:9092
-      KAFKA_ADVERTISED_LISTENERS: DOCKER_INTERNAL://kafka:29092,DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_BROKER_ID: 1
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "my-topic:1:1"
     depends_on:
       - zookeeper
 
-  kafdrop:
-    image: obsidiandynamics/kafdrop
-    container_name: kafdrop
-    restart: "no"
-    networks:
-      - kafka-net
+
+#  kafdrop:
+#    image: obsidiandynamics/kafdrop
+#    container_name: kafdrop
+#    restart: "no"
+#    networks:
+#      - my-network
+#    ports:
+#      - "9000:9000"
+#    environment:
+#      KAFKA_BROKERCONNECT: "kafka:29092"
+#    depends_on:
+#      - "kafka"
+
+  main-service:
+    build: /main/
     ports:
-      - "9000:9000"
-    environment:
-      KAFKA_BROKERCONNECT: "kafka:29092"
+      - "8080:8080"
     depends_on:
-      - "kafka"
+      - kafka
+      - zookeeper
+    networks:
+      - my-network
+
+
+  report:
+    build: /report/
+    ports:
+      - "8081:8081"
+    environment:
+      - MONGODB_URL=mongodb://mongodb:27017/ReportArchiveDB
+    depends_on:
+      - mongodb
+    networks:
+      - my-network
+
+  mongodb:
+    image: mongo
+    ports:
+      - "27017:27017"
+    networks:
+      - my-network
+    volumes:
+      - dbdata:/data/db
+
+volumes:
+  dbdata:
+
