--- a/report/build.gradle
+++ b/report/build.gradle
@@ -24,7 +24,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
@@ -33,10 +33,18 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
-	implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.14'
+//	implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.14'
 
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.example.report.ReportApplication'
+		)
+	}
 }
