migration to aws

--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -6,18 +6,10 @@ topic.name=t.topicname
 
 
 # Kafka producer properties
-spring.kafka.producer.bootstrap-servers=kafka:9092
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.bootstrap-servers=kafka:9092
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+#
+#
+#spring.kafka.template.default-topic=t.topicname
 
-
-spring.kafka.template.default-topic=t.topicname
-
-
-
-
-#kafka:
-#bootstrapServers: 192.168.99.100:9092
-#securityProtocol: PLAINTEXT
-#topics:
-#create: person.create
