--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,9 +47,9 @@ services:
     build: /main/
     ports:
       - "8080:8080"
-    depends_on:
-      - kafka
-      - zookeeper
+#    depends_on:
+#      - kafka
+#      - zookeeper
     networks:
       - my-network
 
