--- a/main/build.gradle
+++ b/main/build.gradle
@@ -25,12 +25,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
+
+	implementation 'software.amazon.awssdk:sqs:2.25.40'
+	implementation 'software.amazon.awssdk:regions:2.25.40'
+
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
-	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
-
 }
 
 tasks.named('test') {
