--- a/report/Dockerfile
+++ b/report/Dockerfile
@@ -2,8 +2,8 @@ FROM amazoncorretto:17
 
 WORKDIR /app
 
-COPY report-0.0.1-SNAPSHOT.jar /app/report-0.0.1-SNAPSHOT.jar
+COPY build/libs/report-0.0.1-SNAPSHOT.jar .
 
-EXPOSE 8081
+EXPOSE 8080
 
 CMD ["java", "-jar", "report-0.0.1-SNAPSHOT.jar"]
