--- a/report/build.gradle
+++ b/report/build.gradle
@@ -24,17 +24,21 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
+
+	//	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.mongodb:mongo-java-driver:3.12.14'
+
+	implementation 'software.amazon.awssdk:sqs:2.25.40'
+	implementation 'software.amazon.awssdk:regions:2.25.40'
+
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
-	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
-//	implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.14'
-
 }
 
 tasks.named('test') {
