--- a/report/src/main/resources/application.properties
+++ b/report/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=report
-server.port=8081
-spring.kafka.consumer.group-id=default
-topic.name=t.topicname
+server.port=8080
+#spring.kafka.consumer.group-id=default
+#topic.name=t.topicname
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=ReportArchiveDB
-#spring.data.mongodb.uri=mongodb://localhost:27017/ReportArchiveDB
-spring.data.mongodb.uri=mongodb://mongodb:27017/ReportArchiveDB
-spring.kafka.consumer.bootstrap-servers=kafka:9092
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=ReportArchiveDB
+##spring.data.mongodb.uri=mongodb://localhost:27017/ReportArchiveDB
+#spring.data.mongodb.uri=mongodb://mongodb:27017/ReportArchiveDB
+#spring.kafka.consumer.bootstrap-servers=kafka:9092
+
+management.metrics.mongo.command.enabled=false
+management.metrics.mongo.connectionpool.enabled=false
